fixed some issues with an article that dind align left

--- a/src/components/article/article.scss
+++ b/src/components/article/article.scss
@@ -28,6 +28,10 @@
         a {
             text-decoration: unset;
         }
+
+        span {
+            display: flow-root;
+        }
     }
 }
 
